# CMP

./: BuildNotes.txt  CMakeLists.txt  Copyright.txt  FindQwt.cmake  License.txt  PackageDescription.txt  QWT_CMakeLists.txt  QWT_SRC_CMakeLists.txt  README.md  ReadMe.txt  Welcome.txt  cmp.ui  notes.txt
code/: cmp.cpp  cmp.h  cmp.qrc  cmp2.ui  cmpAdvancedPlotDialog.ui  cmpColorPaletteWidget.cpp  cmpColorPaletteWidget.h  cmpException.h  cmpImage.cpp  cmpImage.h  cmpNumerics.cpp  cmpNumerics.h  cmpPlots.cpp  cmpPreferences.cpp  cmpPreferences.h  cmpPreferences.ui  cmpQtPairPlotDialog.cpp  cmpQtPairPlotDialog.h  cmpQwtDataPlot.cpp  cmpQwtDataPlot.h  cmpQwtEllipsePlotItem.cpp  cmpQwtEllipsePlotItem.h  cmpUtils.cpp  cmpUtils.h  cmpWidgets.cpp  cmpWidgets.h  main.cpp
code/qss/: default.qss
